// Copyright(c) 2017-2018 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

import "google/protobuf/timestamp.proto";
option go_package  = "github.com/zededa/eve/sdk/go/zmet";

option java_package = "com.zededa.cloud.uservice.proto";

message LogEntry {
    string severity = 1; // e.g., INFO, DEBUG, ERROR etc.
    string source = 2;   // Source of the msg, zedmanager etc.
    string iid = 3;      // instance ID of the source (e.g., PID)
    string content = 4;  // actual log message
    uint64 msgid = 5;    // monotonically increasing number (detect drops)
    map <string, string> tags = 6; // additional meta info <key,value>
    google.protobuf.Timestamp timestamp = 7; // timestamp of the msg
}

message LogBundle {
    string devID = 1; // Device UUID
    string image = 2; // SW image the log got emitted from
    repeated LogEntry log = 3; // Log entries
    google.protobuf.Timestamp timestamp = 4; // upload timestamp
}
